[package]
authors = ["w3irdrobot <rob@w3ird.tech>"]
edition = "2021"
name = "nostr-lud16-aggregation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
nostr-sdk = "0.23.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["serde_json"] }
tokio = { version = "1.32.0", features = ["macros", "fs"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
